Change api endpoints (#31)
* Add tweet DELETE endpoint

* Return pretty printed JSON

* Fix users login time

* Update api.yaml

* Small style fixes
